--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "babel-core": "^6.26.0",
     "babel-minify": "^0.4.0",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "babel-preset-minify": "^0.4.0",
     "eslint": "^4.19.1",
     "rollup": "^0.57.1",
-    "rollup-plugin-babel": "^3.0.3",
-    "uglify-js": "^3.3.18"
+    "rollup-plugin-babel": "^3.0.3"
   },
   "dependencies": {
     "markdown-it": "^8.4.1"
