--- a/config.yml
+++ b/config.yml
@@ -13,7 +13,7 @@ save:
   #
   # Name of the branch being used. Must match the one sent in the URL of the
   # request.
-  branch: "gh-pages"
+  branch: "master"
 
   # Text to use as the commit message or pull request title. Accepts placeholders.
   commitMessage: "file updated"
