--- a/config.yml
+++ b/config.yml
@@ -21,7 +21,7 @@ save:
   # (*) REQUIRED
   #
   # Destination path (filename) for the data files. Accepts placeholders.
-  filename: "@filename"
+  filename: "{@filename}"
 
   # The format of the generated data files. Accepted values are "json", "yaml"
   # or "frontmatter"
