--- a/config.yml
+++ b/config.yml
@@ -65,7 +65,7 @@ save:
   # (*) REQUIRED
   #
   # Destination path (directory) for the data files. Accepts placeholders.
-  path: "_data"
+  path: "docs"
 
   # Names of required fields. If any of these isn't in the request or is empty,
   # an error will be thrown.
