--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ save:
   #
   # Names of the fields the form is allowed to submit. If a field that is
   # not here is part of the request, an error will be thrown.
-  allowedFields: ["filename", "content"]
+  allowedFields: ["filename", "content", "sha"]
 
   # (*) REQUIRED
   #
@@ -16,7 +16,7 @@ save:
   branch: "master"
 
   # Text to use as the commit message or pull request title. Accepts placeholders.
-  commitMessage: "file updated"
+  commitMessage: "file updated - {fields.filename}"
 
   # (*) REQUIRED
   #
@@ -43,7 +43,7 @@ save:
   moderation: true
 
   # Name of the site. Used in notification emails.
-  name: "eduardoboucas.com"
+  name: "github.com"
 
   # Notification settings. When enabled, users can choose to receive notifications
   # via email when someone adds a reply or a new comment. This requires an account
@@ -69,7 +69,7 @@ save:
 
   # Names of required fields. If any of these isn't in the request or is empty,
   # an error will be thrown.
-  requiredFields: ["filename", "content"]
+  requiredFields: ["filename", "content", "sha"]
 
   # List of transformations to apply to any of the fields supplied. Keys are
   # the name of the field and values are possible transformation types.
