--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ save:
   #
   # Names of the fields the form is allowed to submit. If a field that is
   # not here is part of the request, an error will be thrown.
-  allowedFields: ["filename", "content", "sha"]
+  allowedFields: ["filename", "content"]
 
   # (*) REQUIRED
   #
@@ -69,7 +69,7 @@ save:
 
   # Names of required fields. If any of these isn't in the request or is empty,
   # an error will be thrown.
-  requiredFields: ["filename", "content", "sha"]
+  requiredFields: ["filename", "content"]
 
   # List of transformations to apply to any of the fields supplied. Keys are
   # the name of the field and values are possible transformation types.
